Fix sidebar on mobile screens

--- a/_sass/simple-sidebar.scss
+++ b/_sass/simple-sidebar.scss
@@ -15,7 +15,7 @@ body {
 
 #sidebar-wrapper {
   min-height: 100vh;
-  margin-left: -15rem;
+  margin-left: -16rem;
   -webkit-transition: margin .25s ease-out;
   -moz-transition: margin .25s ease-out;
   -o-transition: margin .25s ease-out;
